--- a/model/Model 2.ipynb
+++ b/model/Model 2.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
     "    sentence = str(sentence)\n",
     "    return sentence[:sentence.find(\"https://\")]\n",
     "\n",
-    "def pre_processing(X, Y=None):\n",
+    "def pre_processing(X, **kwargs):\n",
     "    # Replaces special characters\n",
     "    X = X.str.replace('&amp;', \"and\")\n",
     "    X = X.str.replace('\\xa0', \" \")\n",
@@ -335,41 +335,37 @@
     "    #Removes null values\n",
     "    ind = list(X[X==\"\"].index)\n",
     "    x = X.drop(ind)\n",
-    "    if Y != None:\n",
-    "        y = Y.drop(ind)\n",
-    "        return x, y\n",
     "    \n",
-    "    return X"
+    "    if 'Y' in kwargs:\n",
+    "        y = kwargs['Y'].drop(ind)\n",
+    "        return x, y\n",
+    "        \n",
+    "    return x    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We’re indeed in a constitutional crisis and must defend our democracy! AG Barr should be held in contempt for refusal to testify and submit docs. As co-equal branch, Congress has a constitutional obligation to oversight, combat corruption and get to the truth!\n",
-      "https://t.co/vjZ2P7PSWl\n",
-      "We’re indeed in a constitutional crisis and must defend our democracy! AG Barr should be held in contempt for refusal to testify and submit docs. As co-equal branch, Congress has a constitutional obligation to oversight, combat corruption and get to the truth!\n",
-      "\n",
-      "we’re indeed in a constitutional crisis and must defend our democracy ag barr should be held in contempt for refusal to testify and submit docs as coequal branch congress has a constitutional obligation to oversight combat corruption and get to the truth\n",
       "(90000,)\n",
       "(90000,)\n"
      ]
     }
    ],
    "source": [
-    "x, y = pre_processing(X, Y)\n",
+    "x, y = pre_processing(X, Y=Y)\n",
     "print(X.shape)\n",
     "print(Y.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -436,10 +432,10 @@
        "89997                                   just doing my job \n",
        "89998    working hard to set a new standard of accessib...\n",
        "89999    got to sit down with joekhaliltv to talk about...\n",
-       "Name: Tweet, Length: 90000, dtype: object"
+       "Name: Tweet, Length: 89541, dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -521,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -575,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +608,7 @@
        "       [ 128,   13,  590, ...,    0,    0,    0]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +629,7 @@
        "(71632, 74)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
